--- a/index.html
+++ b/index.html
@@ -13,21 +13,18 @@
 
 
     <script>
-      //Your web app's Firebase configuration
+      // Your web app's Firebase configuration
       var firebaseConfig = {
-        apiKey: "AIzaSyBYV9kWljd-8zlRsYSLGIv2zBX4MhkNAo8",
-        authDomain: "multiplayer-car-racing-game.firebaseapp.com",
-        databaseURL: "https://multiplayer-car-racing-game.firebaseio.com",
-        projectId: "multiplayer-car-racing-game",
-        storageBucket: "",
-        messagingSenderId: "936147099930",
-        appId: "1:936147099930:web:dba47c5bb648f4ef"
+        apiKey: "AIzaSyA0Bqq2m4hztjQbnzJ3JffZZRuCVY3U6xI",
+        authDomain: "class-37-91204.firebaseapp.com",
+        databaseURL: "https://class-37-91204.firebaseio.com",
+        projectId: "class-37-91204",
+        storageBucket: "class-37-91204.appspot.com",
+        messagingSenderId: "697617507353",
+        appId: "1:697617507353:web:08b4857fee80bc66803688"
       };
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
     </script>
 
     <script src="js/Player.js"></script>
